--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,13 @@
 databases:
-  - name: cnc_db
+  - name: cybernetcall_db
     region: singapore
     plan: free
-    databaseName: cnc_db
+    databaseName: cybernetcall_db
     user: django_user
 
 services:
   - type: web
-    name: cnc
+    name: cybernetcall
     env: python
     region: singapore
     buildCommand: './build.sh'
@@ -18,7 +18,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: cnc_db
+          name: cybernetcall_db
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
