--- a/cnc/static/cnc/manifest.json
+++ b/cnc/static/cnc/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "CyberNetCall",
   "short_name": "CNC",
-  "start_url": "./index.html",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
