--- a/render.yaml
+++ b/render.yaml
@@ -16,6 +16,8 @@ services:
     branch: main
     healthCheckPath: /
     envVars:
+      - key: DJANGO_DEBUG
+        value: false
       - key: DATABASE_URL
         fromDatabase:
           name: cybernetcall_db
