--- a/cnc/static/cnc/manifest.json
+++ b/cnc/static/cnc/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "/static/cnc/icon.png",
       "sizes": "192x192",
       "type": "image/png"
     }
