--- a/cnc/static/cnc/manifest.json
+++ b/cnc/static/cnc/manifest.json
@@ -1,8 +1,9 @@
 {
   "name": "CyberNetCall",
   "short_name": "CNC",
-  "description": "Peer-to-peer communication app using WebRTC.",
+  "description": "Peer-to-peer communication via QR and WebRTC.",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007bff",
@@ -11,14 +12,12 @@
     {
       "src": "/static/cnc/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "/static/cnc/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "/static/cnc/icons/icon-maskable-512x512.png",
@@ -28,3 +27,4 @@
     }
   ]
 }
+
