--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
     env: python
     region: singapore
     buildCommand: './build.sh'
-    startCommand: 'gunicorn mysite.wsgi:application'
+    startCommand: 'daphne -b 0.0.0.0 -p 10000 cybernetcall.asgi:application'
     plan: free
     branch: main
     healthCheckPath: /
