--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,53 @@
-django==5.0.4
-dj-database-url
-python-decouple
-django-environ
-gunicorn
-psycopg2-binary
-whitenoise
-channels
-channels_redis
-daphne
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+asgiref==3.11.0
+async-timeout==5.0.1
+attrs==25.4.0
+autobahn==24.4.2
+Automat==25.4.16
+certifi==2025.11.12
+cffi==2.0.0
+channels==4.3.2
+channels_redis==4.3.0
+charset-normalizer==3.4.4
+constantly==23.10.4
+cryptography==46.0.3
+daphne==4.2.1
+dj-database-url==3.0.1
+Django==5.0.4
+django-environ==0.12.0
+frozenlist==1.8.0
+git-filter-repo==2.47.0
+gunicorn==23.0.0
+http_ece==1.2.1
+hyperlink==21.0.0
+idna==3.11
+Incremental==24.11.0
+msgpack==1.1.2
+multidict==6.7.0
+packaging==25.0
+propcache==0.4.1
+psycopg2-binary==2.9.11
+py-vapid==1.9.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+pyOpenSSL==25.3.0
+python-decouple==3.8
+pywebpush==2.1.2
+redis==7.1.0
+requests==2.32.5
+service-identity==24.2.0
+six==1.17.0
+sqlparse==0.5.4
+stripe==14.0.1
+tomli==2.3.0
+Twisted==25.5.0
+txaio==25.9.2
+typing_extensions==4.15.0
+urllib3==2.6.1
+whitenoise==6.11.0
+yarl==1.22.0
+zope.interface==8.1.1
+
