--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,3 @@
-databases:
-  - name: cybernetcall_db
-    region: singapore
-    plan: free
-    databaseName: cybernetcall_db
-    user: django_user
-
 services:
   - type: redis
     name: cybernetcall-redis
@@ -17,7 +10,7 @@ services:
     env: python
     region: singapore
     buildCommand: './build.sh'
-    startCommand: 'python manage.py migrate && daphne -b 0.0.0.0 -p 10000 cybernetcall.asgi:application'
+    startCommand: 'python manage.py migrate && daphne -b 0.0.0.0 -p $PORT cybernetcall.asgi:application'
 
     plan: free
     branch: main
@@ -25,10 +18,8 @@ services:
     envVars:
       - key: DJANGO_DEBUG
         value: false
-      - key: DATABASE_URL
-        fromDatabase:
-          name: cybernetcall_db
-          property: connectionString
+      # DATABASE_URL はRenderのダッシュボードでSecretとして設定してください。
+      # Supabaseプロジェクトの接続文字列（postgres://...）を使用します。
       - key: REDIS_URL
         fromService:
           type: redis
