--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ pycparser==2.23
 pyOpenSSL==25.3.0
 python-decouple==3.8
 pywebpush==2.1.2
-redis==7.1.0
+redis[ssl]~=5.0
 requests==2.32.5
 service-identity==24.2.0
 six==1.17.0
@@ -50,4 +50,3 @@ urllib3==2.6.1
 whitenoise==6.11.0
 yarl==1.22.0
 zope.interface==8.1.1
-
