--- a/render.yaml
+++ b/render.yaml
@@ -21,6 +21,8 @@ services:
     envVars:
       - key: DJANGO_DEBUG
         value: "false"
+      - key: PYTHONUNBUFFERED
+        value: "true"
       # DATABASE_URL はRenderのダッシュボードでSecretとして設定してください。
       # Supabaseプロジェクトの接続文字列（postgres://...）を使用します。
       - key: REDIS_URL
@@ -30,6 +32,4 @@ services:
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
-      - key: WEB_CONCURRENCY
-        value: "4"
     autoDeploy: true
